--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ POSTGRES_URL_NON_POOLING="postgres://default:t32MuzXpbfsk@ep-empty-cherry-a4qd99
 POSTGRES_USER="default"
 POSTGRES_HOST="ep-empty-cherry-a4qd998t-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="t32MuzXpbfsk"
-POSTGRES_DATABASE="verceldb"
+POSTGRES_DATABASE="garment_new"
