--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-POSTGRES_URL="postgres://default:t32MuzXpbfsk@ep-empty-cherry-a4qd998t-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_PRISMA_URL="postgres://default:t32MuzXpbfsk@ep-empty-cherry-a4qd998t-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NO_SSL="postgres://default:t32MuzXpbfsk@ep-empty-cherry-a4qd998t-pooler.us-east-1.aws.neon.tech:5432/verceldb"
-POSTGRES_URL_NON_POOLING="postgres://default:t32MuzXpbfsk@ep-empty-cherry-a4qd998t.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_USER="default"
-POSTGRES_HOST="ep-empty-cherry-a4qd998t-pooler.us-east-1.aws.neon.tech"
-POSTGRES_PASSWORD="t32MuzXpbfsk"
-POSTGRES_DATABASE="garment_new"
+DB_CONNECTION=pgsql
+DATABASE_URL='postgres://default:endpoint=ep-empty-cherry-a4qd998t-pooler;t32MuzXpbfsk@ep-empty-cherry-a4qd998t-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require'
+DB_HOST=ep-empty-cherry-a4qd998t-pooler.us-east-1.aws.neon.tech
+# DB_PORT=5432
+DB_DATABASE=verceldb
+DB_USERNAME=default
+DB_PASSWORD=t32MuzXpbfsk
