--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_CONNECTION=pgsql
 DATABASE_URL='postgres://default:endpoint=ep-empty-cherry-a4qd998t-pooler;t32MuzXpbfsk@ep-empty-cherry-a4qd998t-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require'
 DB_HOST=ep-empty-cherry-a4qd998t-pooler.us-east-1.aws.neon.tech
-# DB_PORT=5432
+DB_PORT=5432
 DB_DATABASE=verceldb
 DB_USERNAME=default
 DB_PASSWORD=t32MuzXpbfsk
