--- a/.env
+++ b/.env
@@ -1,61 +1,7 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=base64:6PBQdeyLjTpAqJ+Sl85B62/ItWYgMD+EJXcdj2zJdMI=
-APP_DEBUG=true
-APP_URL=http://localhost
-
-LOG_CHANNEL=stack
-
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=garment_new
-# DB_USERNAME=root
-# DB_PASSWORD=root
-
-# DB_CONNECTION=pgsql
-# DB_HOST=127.0.0.1
-# DB_PORT=5432
-# DB_DATABASE=garment_new
-# DB_USERNAME=postgres
-# DB_PASSWORD=root
-
 DB_CONNECTION=pgsql
-DATABASE_URL='postgres://default:endpoint=ep-empty-cherry-a4qd998t-pooler;t32MuzXpbfsk@ep-empty-cherry-a4qd998t-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require'
-DB_HOST=ep-empty-cherry-a4qd998t-pooler.us-east-1.aws.neon.tech
+DATABASE_URL='postgres://default:t32MuzXpbfsk@ep-empty-cherry-a4qd998t-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require'
+DB_HOST='ep-empty-cherry-a4qd998t-pooler.us-east-1.aws.neon.tech'
 DB_PORT=5432
-DB_DATABASE=verceldb
-DB_USERNAME=default
-DB_PASSWORD=t32MuzXpbfsk
-
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+DB_DATABASE='verceldb'
+DB_USERNAME='default'
+DB_PASSWORD='t32MuzXpbfsk'
